--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ buildNumber.properties
 .mvn/timing.properties
 
 *.iml
+*.log
 .idea/
 derby.log
 /sem-persistence/src/main/resources/database.properties
