--- a/sem-persistence/src/test/resources/testdatabase.properties
+++ b/sem-persistence/src/test/resources/testdatabase.properties
@@ -1,4 +1,4 @@
 jdbc.driver=org.postgresql.Driver
 jdbc.url=jdbc:postgresql://localhost:5432/pa036_test
 jdbc.user=postgres
-jdbc.pass=postgres
+jdbc.pass=enter999
