--- a/logging-persistence/pom.xml
+++ b/logging-persistence/pom.xml
@@ -31,6 +31,13 @@
     </build>
 
     <dependencies>
+
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>logging-utils</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.apache.derby</groupId>
             <artifactId>derby</artifactId>
