--- a/logging-service/pom.xml
+++ b/logging-service/pom.xml
@@ -14,6 +14,13 @@
     <name>Service Layer for Logging Project</name>
 
     <dependencies>
+
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>logging-utils</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>logging-persistence</artifactId>
