fixed tests + renamed LoggerHelper + made example of logging in Service layer (InvitationServiceImpl)

--- a/logging-api/pom.xml
+++ b/logging-api/pom.xml
@@ -19,5 +19,10 @@
             <artifactId>logging-persistence</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+        </dependency>
     </dependencies>
 </project>
