--- a/logging-service/pom.xml
+++ b/logging-service/pom.xml
@@ -27,6 +27,12 @@
             <type>test-jar</type>
             <version>${project.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>logging-persistence</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>logging-api</artifactId>
