--- a/logging-api/pom.xml
+++ b/logging-api/pom.xml
@@ -16,6 +16,12 @@
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>logging-utils</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>logging-persistence</artifactId>
             <version>${project.version}</version>
         </dependency>
