--- a/logging-integration-tests/pom.xml
+++ b/logging-integration-tests/pom.xml
@@ -3,17 +3,23 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>logging</artifactId>
         <groupId>cz.muni.pa036</groupId>
+        <artifactId>logging</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>logging-integration-tests</artifactId>
     <packaging>jar</packaging>
-    <name>Integration Tests</name>
+    <name>Integration Tests for Logging Project</name>
 
     <dependencies>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>logging-utils</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>logging-service</artifactId>
