--- a/logging-utils/pom.xml
+++ b/logging-utils/pom.xml
@@ -11,13 +11,28 @@
 
     <artifactId>logging-utils</artifactId>
     <packaging>jar</packaging>
-    <name>Utils for Logging Project</name>
+    <name>Logging Utils for Logging Project</name>
+
+    <properties>
+        <logback.version>1.1.3</logback.version>
+    </properties>
 
     <dependencies>
-
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>${logback.version}</version>
         </dependency>
     </dependencies>
 
