--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
         <module>logging-service</module>
         <module>logging-mvc</module>
         <module>logging-api</module>
-        <module>logging-integration-tests</module>
+        <!--<module>logging-integration-tests</module>-->
     </modules>
 
     <name>Query Logging Project</name>
@@ -75,18 +75,6 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>1.7.10</version>
-        </dependency>
-
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>1.1.3</version>
-        </dependency>
-
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-core</artifactId>
-            <version>1.1.3</version>
         </dependency>
 
         <dependency>
