fixed properties loading

--- a/logging-utils/src/main/resources/loggingConfig.properties
+++ b/logging-utils/src/main/resources/loggingConfig.properties
@@ -3,7 +3,8 @@
 # For all available properties, check https://docs.oracle.com/javase/tutorial/essential/environment/sysprop.html
 
 # LOG_DIR=C:${file.separator}projects${file.separator}PA036${file.separator}PA036
-LOG_DIR=${user.dir}
+# LOG_DIR=C:${file.separator}${file.separator}projects${file.separator}PA036${file.separator}PA036
+LOG_DIR=D:${file.separator}${file.separator}MUNI${file.separator}PA036${file.separator}logs
 LOG_FILE=PA036Log.log
 
 # Following properties can be used to adjust logging levels of different parts of the application
