exception tests example

--- a/logging-integration-tests/pom.xml
+++ b/logging-integration-tests/pom.xml
@@ -25,6 +25,13 @@
             <artifactId>logging-service</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.9.5</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 
