--- a/logging-utils/src/main/resources/loggingConfig.properties
+++ b/logging-utils/src/main/resources/loggingConfig.properties
@@ -4,8 +4,8 @@
 
 # LOG_DIR=C:${file.separator}projects${file.separator}PA036${file.separator}PA036
 # LOG_DIR=C:${file.separator}${file.separator}projects${file.separator}PA036${file.separator}PA036
-LOG_DIR=D:${file.separator}${file.separator}MUNI${file.separator}PA036${file.separator}logs
-LOG_FILE=PA036Log.log
+LOG_DIR=/home/kamil
+LOG_FILE=pa036.log
 
 # Following properties can be used to adjust logging levels of different parts of the application
 # Level can be set to any of the following (using different value will mean application will fallback
