--- a/logging-utils/src/main/resources/loggingConfig.properties
+++ b/logging-utils/src/main/resources/loggingConfig.properties
@@ -35,3 +35,16 @@ HIBERNATE_LEVEL=WARN
 # If logging provided by callstack is sufficient, this can be turned to lower level.
 HIBERNATE_TYPE_LEVEL=TRACE
 HIBERNATE_SQL_LEVEL=DEBUG
+
+
+DBS_LOG_DESTINATION=CSVLOG
+DBS_LOGGING_DIRECTORY=/home/kamil/testdb
+DBS_LOG_FILENAME=pa036.log
+DBS_LOGFILE_MODE=0777
+DBS_ROTATION_AGE=3600
+DBS_ROTATION_SIZE=5000
+DBS_MIN_MESSAGE=INFO
+DBS_MIN_ERROR_STATE=ERROR
+DBS_LOG_DURATION=TRUE
+DBS_LOG_MIN_DURATION_STATEMENT=20000
+DBS_LOG_LINE_PREFIX=%t [%p-%l] %q%u@%d
