--- a/logging-mvc/pom.xml
+++ b/logging-mvc/pom.xml
@@ -28,6 +28,13 @@
 
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>logging-service</artifactId>
+            <version>${project.version}</version>
+            <type>test-jar</type>
+        </dependency>
+
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>logging-persistence</artifactId>
             <version>${project.version}</version>
         </dependency>
@@ -93,6 +100,18 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.9.5</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
         </dependency>
     </dependencies>
 
