fixed shitful of stuff, added tests in MVC layer

--- a/logging-utils/src/main/resources/loggingConfig.properties
+++ b/logging-utils/src/main/resources/loggingConfig.properties
@@ -4,7 +4,7 @@
 
 # LOG_DIR=C:${file.separator}projects${file.separator}PA036${file.separator}PA036
 # LOG_DIR=C:${file.separator}${file.separator}projects${file.separator}PA036${file.separator}PA036
-LOG_DIR=/home/kamil
+LOG_DIR=${user.dir}${file.separator}PA036${file.separator}logs
 LOG_FILE=pa036.log
 
 # Following properties can be used to adjust logging levels of different parts of the application
