runtime level changing works as expected

--- a/logging-utils/src/main/resources/loggingConfig.properties
+++ b/logging-utils/src/main/resources/loggingConfig.properties
@@ -4,7 +4,7 @@
 
 # LOG_DIR=C:${file.separator}projects${file.separator}PA036${file.separator}PA036
 # LOG_DIR=C:${file.separator}${file.separator}projects${file.separator}PA036${file.separator}PA036
-LOG_DIR=/home/kamil
+LOG_DIR=${user.dir}${file.separator}logs
 LOG_FILE=pa036.log
 
 # Following properties can be used to adjust logging levels of different parts of the application
@@ -38,7 +38,7 @@ HIBERNATE_SQL_LEVEL=DEBUG
 
 
 DBS_LOG_DESTINATION=CSVLOG
-DBS_LOGGING_DIRECTORY=/home/kamil/testdb
+DBS_LOGGING_DIRECTORY=${user.dir}${file.separator}logs${file.separator}DBlogs
 DBS_LOG_FILENAME=pa036.log
 DBS_LOGFILE_MODE=0777
 DBS_ROTATION_AGE=3600
