--- a/logging-mvc/pom.xml
+++ b/logging-mvc/pom.xml
@@ -125,6 +125,11 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.21</version>
+        </dependency>
 
     </dependencies>
 
