added log management item

--- a/logging-utils/src/main/resources/loggingConfig.properties
+++ b/logging-utils/src/main/resources/loggingConfig.properties
@@ -19,7 +19,7 @@ LOG_FILE=pa036.log
 # ALL
 
 # basic root level should be WARN in production to prevent output overflowing
-ROOT_LEVEL=WARN
+ROOT_LEVEL=DEBUG
 
 # PA036 level defines level of custom logging introduced in PA036 course. It should be set to debug to provide
 # callstack and CRUD exception logging, or lower level if logging callstack and exceptions is not desired.
@@ -37,8 +37,9 @@ HIBERNATE_TYPE_LEVEL=TRACE
 HIBERNATE_SQL_LEVEL=DEBUG
 
 
+DBS_LOG_STATEMENT=NONE
 DBS_LOG_DESTINATION=CSVLOG
-DBS_LOGGING_DIRECTORY=${user.dir}${file.separator}logs${file.separator}DBlogs
+DBS_LOGGING_DIRECTORY=/home/kamil/testdb
 DBS_LOG_FILENAME=pa036.log
 DBS_LOGFILE_MODE=0777
 DBS_ROTATION_AGE=3600
