Grammar mistake fixed - aby Zuzana mohla spať :D

--- a/logging-utils/src/main/resources/loggingConfig.properties
+++ b/logging-utils/src/main/resources/loggingConfig.properties
@@ -4,7 +4,7 @@
 
 # LOG_DIR=C:${file.separator}projects${file.separator}PA036${file.separator}PA036
 # LOG_DIR=C:${file.separator}${file.separator}projects${file.separator}PA036${file.separator}PA036
-LOG_DIR=${user.dir}${file.separator}logs
+LOG_DIR=/home/kamil
 LOG_FILE=pa036.log
 
 # Following properties can be used to adjust logging levels of different parts of the application
@@ -37,10 +37,17 @@ HIBERNATE_TYPE_LEVEL=TRACE
 HIBERNATE_SQL_LEVEL=DEBUG
 
 
+
+# This settings should be loaded from DBS during application start
+# For Project purpose it is enough to load it from properties file.
+# Loading this options case that options could not be synchronized with DBS.
 DBS_LOG_STATEMENT=NONE
 DBS_LOG_DESTINATION=CSVLOG
-DBS_LOGGING_DIRECTORY=/home/kamil/testdb
+#not editable via app
+DBS_LOGGING_DIRECTORY=/home/kamil/testdb #not editable via app
+#not editable via app
 DBS_LOG_FILENAME=pa036.log
+#not editable via app
 DBS_LOGFILE_MODE=0777
 DBS_ROTATION_AGE=3600
 DBS_ROTATION_SIZE=5000
@@ -48,4 +55,5 @@ DBS_MIN_MESSAGE=INFO
 DBS_MIN_ERROR_STATE=ERROR
 DBS_LOG_DURATION=TRUE
 DBS_LOG_MIN_DURATION_STATEMENT=20000
+#not editable via app
 DBS_LOG_LINE_PREFIX=%t [%p-%l] %q%u@%d
